costo biglietto - versione concentrata

--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
     <script>
 
         // LONG DETAILED VERSION
-        var km = parseInt(prompt('Quanti km devi percorrere?'));
-        var age = parseInt(prompt('Quanti anni hai?'));
+        // var km = parseInt(prompt('Quanti km devi percorrere?'));
+        // var age = parseInt(prompt('Quanti anni hai?'));
 
-        var isMinor = age < 18;
-        var isRetired = age > 65;
+        // var isMinor = age < 18;
+        // var isRetired = age > 65;
 
-        var cost = km * .21;
-        var minorDiscountCost = ((km * .21) * 80) / 100;
-        var retiredDiscountCost = ((km * .21) * 60) / 100;
+        // var cost = km * .21;
+        // var minorDiscountCost = ((km * .21) * 80) / 100;
+        // var retiredDiscountCost = ((km * .21) * 60) / 100;
 
 
-        console.log('km da percorrere: ' + km);
-        console.log('età: ' + age);
-        console.log("l'utente è minorenne? " + isMinor);
-        console.log("l'utente è un pensionato? " + isRetired);
+        // console.log('km da percorrere: ' + km);
+        // console.log('età: ' + age);
+        // console.log("l'utente è minorenne? " + isMinor);
+        // console.log("l'utente è un pensionato? " + isRetired);
 
-        if (isMinor == true){
-            console.log("l'utente deve pagare " + minorDiscountCost)
-        }
-        else if (isRetired == true){
-            console.log("l'utente deve pagare " + retiredDiscountCost)
-        }
-        else{
-            console.log("l'utente deve pagare " + cost)
-        };
+        // if (isMinor == true){
+        //     console.log("l'utente deve pagare " + minorDiscountCost)
+        // }
+        // else if (isRetired == true){
+        //     console.log("l'utente deve pagare " + retiredDiscountCost)
+        // }
+        // else{
+        //     console.log("l'utente deve pagare " + cost)
+        // };
 
 
         // SHORTER VERSION
-        // var km = prompt('Quanti km devi percorrere?')
-        // var age = prompt('Quanti anni hai?');
-        // var cost = km * .21;
+        var km = prompt('Quanti km devi percorrere?')
+        var age = prompt('Quanti anni hai?');
+        var cost = km * .21;
 
-        // if (age < 18){
-        //     console.log((cost * 80)/ 100)
-        // }
-        // else if (age > 65){
-        //     console.log((cost * 60) / 100)
-        // }
-        // else{
-        //     console.log(cost)
-        // };
+        if (age < 18){
+            console.log((cost * 80)/ 100)
+        }
+        else if (age > 65){
+            console.log((cost * 60) / 100)
+        }
+        else{
+            console.log(cost)
+        };
 
     </script>
     
