costo biglietto - versione concentrata update

--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
         var cost = km * .21;
 
         if (age < 18){
-            console.log((cost * 80)/ 100)
+            cost = (cost * 80) / 100;
         }
         else if (age > 65){
-            console.log((cost * 60) / 100)
+            cost = (cost * 60) / 100;
         }
-        else{
-            console.log(cost)
-        };
+
+        console.log( km, age, cost);
 
     </script>
     
